--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="edu.unal.parkslotapp">
+    package="edu.unal.parkslotapp" >
 
     <application
         android:allowBackup="true"
@@ -12,23 +12,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name="edu.unal.parkslotapp.MainActivity"
-            android:exported="true">
+            android:name=".registro"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Login"
-            android:exported="true">
-        </activity>
-
-        <activity android:name=".Singin"
-            android:exported="true">
+        <activity
+            android:name=".Login"
+            android:exported="true" >
         </activity>
 
     </application>
