--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 19 14:52:54 COT 2022
-sdk.dir=C\:\\Users\\elkin\\AppData\\Local\\Android\\Sdk
+#Wed Nov 30 22:09:37 COT 2022
+sdk.dir=C\:\\Users\\Cristian\\AppData\\Local\\Android\\Sdk
