--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 30 22:09:37 COT 2022
-sdk.dir=C\:\\Users\\Cristian\\AppData\\Local\\Android\\Sdk
+#Thu Dec 01 00:08:02 COT 2022
+sdk.dir=C\:\\Users\\Sergi\\AppData\\Local\\Android\\Sdk
